src/main/java/formula/parser/ODSFormulaParserParser.java
package formula.parser;// Generated from ODSFormulaParser.g4 by ANTLR 4.9.2

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ODSFormulaParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, IRI=9, 
		Whitespace=1, SingleQuoted=2, Number=3, StandardNumber=4, PointNumber=5, 
		String=6, Plus=7, Minus=8, Percent=9, Mul=10, Div=11, Power=12, Eq=13, 
		NEq=14, LT=15, GT=16, LE=17, GE=18, StringOp=19, IntersectionOp=20, ReferenceConcatenationOp=21, 
		RangeOp=22, Separator=23, SheetName=24, QuotedSheetName=25, ReferenceError=26, 
		Column=27, Row=28, QuotedLabel=29, AutomaticIntersection=30, Identifier=31, 
		Error=32, RowSeparator=33, ParenLeft=34, ParenRight=35;
	public static final int
		RULE_formula = 0, RULE_intro = 1, RULE_forceRecalc = 2, RULE_expression = 3, 
		RULE_prefixOp = 4, RULE_postfixOp = 5, RULE_infixOp = 6, RULE_arithmeticOp = 7, 
		RULE_additiveOp = 8, RULE_mulplicativeOP = 9, RULE_comparisonOp = 10, 
		RULE_referenceOp = 11, RULE_functionName = 12, RULE_parameterList = 13, 
		RULE_emptyOrParameter = 14, RULE_parameter = 15, RULE_reference = 16, 
		RULE_rangeAddress = 17, RULE_sheetLocatorOrEmpty = 18, RULE_sheetLocator = 19, 
		RULE_subtableCell = 20, RULE_source = 21, RULE_cellAddress = 22, RULE_referenceList = 23, 
		RULE_namedExpression = 24, RULE_simpleNamedExpression = 25, RULE_sheetLocalNamedExpression = 26, 
		RULE_externalNamedExpression = 27, RULE_array = 28, RULE_matrixRow = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"formula", "intro", "forceRecalc", "expression", "prefixOp", "postfixOp", 
			"infixOp", "arithmeticOp", "additiveOp", "mulplicativeOP", "comparisonOp", 
			"referenceOp", "functionName", "parameterList", "emptyOrParameter", "parameter", 
			"reference", "rangeAddress", "sheetLocatorOrEmpty", "sheetLocator", "subtableCell", 
			"source", "cellAddress", "referenceList", "namedExpression", "simpleNamedExpression", 
			"sheetLocalNamedExpression", "externalNamedExpression", "array", "matrixRow"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", "'.'", "'''", "'#'", "'$$'", "'+'", "'-'", "'%'", 
			"'*'", "'/'", "'^'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='", "'&'", 
			"'!'", "'~'", "':'", "';'", null, null, "'#REF!'", null, null, null, 
			null, null, null, "'|'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "IRI", "Mul", "Div", 
			"Power", "Eq", "NEq", "LT", "GT", "LE", "GE", "StringOp", "IntersectionOp", 
			"ReferenceConcatenationOp", "RangeOp", "Separator", "SheetName", "QuotedSheetName", 
			"ReferenceError", "Column", "Row", "QuotedLabel", "AutomaticIntersection", 
			"Identifier", "Error", "RowSeparator", "ParenLeft", "ParenRight"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ODSFormulaParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ODSFormulaParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FormulaContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public IntroContext intro() {
			return getRuleContext(IntroContext.class,0);
		}
		public FormulaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formula; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).enterFormula(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).exitFormula(this);
		}
	}

	public final FormulaContext formula() throws RecognitionException {
		FormulaContext _localctx = new FormulaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_formula);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Eq) {
				{
				setState(60);
				intro();
				}
			}

			setState(63);
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntroContext extends ParserRuleContext {
		public TerminalNode Eq() { return getToken(ODSFormulaParserParser.Eq, 0); }
		public ForceRecalcContext forceRecalc() {
			return getRuleContext(ForceRecalcContext.class,0);
		}
		public IntroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).enterIntro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).exitIntro(this);
		}
	}

	public final IntroContext intro() throws RecognitionException {
		IntroContext _localctx = new IntroContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_intro);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(Eq);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Eq) {
				{
				setState(66);
				forceRecalc();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForceRecalcContext extends ParserRuleContext {
		public TerminalNode Eq() { return getToken(ODSFormulaParserParser.Eq, 0); }
		public ForceRecalcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forceRecalc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).enterForceRecalc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).exitForceRecalc(this);
		}
	}

	public final ForceRecalcContext forceRecalc() throws RecognitionException {
		ForceRecalcContext _localctx = new ForceRecalcContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_forceRecalc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(Eq);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public int pr;
		public TerminalNode Number() { return getToken(ODSFormulaParserParser.Number, 0); }
		public TerminalNode String() { return getToken(ODSFormulaParserParser.String, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public PrefixOpContext prefixOp() {
			return getRuleContext(PrefixOpContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode ParenLeft() { return getToken(ODSFormulaParserParser.ParenLeft, 0); }
		public TerminalNode ParenRight() { return getToken(ODSFormulaParserParser.ParenRight, 0); }
		public FunctionNameContext functionName() {
			return getRuleContext(FunctionNameContext.class,0);
		}
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public ReferenceContext reference() {
			return getRuleContext(ReferenceContext.class,0);
		}
		public TerminalNode QuotedLabel() { return getToken(ODSFormulaParserParser.QuotedLabel, 0); }
		public TerminalNode AutomaticIntersection() { return getToken(ODSFormulaParserParser.AutomaticIntersection, 0); }
		public NamedExpressionContext namedExpression() {
			return getRuleContext(NamedExpressionContext.class,0);
		}
		public TerminalNode Error() { return getToken(ODSFormulaParserParser.Error, 0); }
		public List<PostfixOpContext> postfixOp() {
			return getRuleContexts(PostfixOpContext.class);
		}
		public PostfixOpContext postfixOp(int i) {
			return getRuleContext(PostfixOpContext.class,i);
		}
		public List<TerminalNode> RangeOp() { return getTokens(ODSFormulaParserParser.RangeOp); }
		public TerminalNode RangeOp(int i) {
			return getToken(ODSFormulaParserParser.RangeOp, i);
		}
		public List<TerminalNode> IntersectionOp() { return getTokens(ODSFormulaParserParser.IntersectionOp); }
		public TerminalNode IntersectionOp(int i) {
			return getToken(ODSFormulaParserParser.IntersectionOp, i);
		}
		public List<TerminalNode> ReferenceConcatenationOp() { return getTokens(ODSFormulaParserParser.ReferenceConcatenationOp); }
		public TerminalNode ReferenceConcatenationOp(int i) {
			return getToken(ODSFormulaParserParser.ReferenceConcatenationOp, i);
		}
		public List<TerminalNode> Power() { return getTokens(ODSFormulaParserParser.Power); }
		public TerminalNode Power(int i) {
			return getToken(ODSFormulaParserParser.Power, i);
		}
		public List<MulplicativeOPContext> mulplicativeOP() {
			return getRuleContexts(MulplicativeOPContext.class);
		}
		public MulplicativeOPContext mulplicativeOP(int i) {
			return getRuleContext(MulplicativeOPContext.class,i);
		}
		public List<AdditiveOpContext> additiveOp() {
			return getRuleContexts(AdditiveOpContext.class);
		}
		public AdditiveOpContext additiveOp(int i) {
			return getRuleContext(AdditiveOpContext.class,i);
		}
		public List<TerminalNode> StringOp() { return getTokens(ODSFormulaParserParser.StringOp); }
		public TerminalNode StringOp(int i) {
			return getToken(ODSFormulaParserParser.StringOp, i);
		}
		public List<ComparisonOpContext> comparisonOp() {
			return getRuleContexts(ComparisonOpContext.class);
		}
		public ComparisonOpContext comparisonOp(int i) {
			return getRuleContext(ComparisonOpContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExpressionContext(ParserRuleContext parent, int invokingState, int pr) {
			super(parent, invokingState);
			this.pr = pr;
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression(int pr) throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState(), pr);
		enterRule(_localctx, 6, RULE_expression);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(71);
				match(T__2);
				}
				break;
			case 2:
				{
				setState(72);
				match(T__5);
				}
				break;
			case 3:
				{
				setState(73);
				array();
				}
				break;
			case 4:
				{
				setState(74);
				prefixOp();
				setState(75);
				expression(7);
				}
				break;
			case 5:
				{
				setState(77);
				match(ParenLeft);
				setState(78);
				expression(0);
				setState(79);
				match(ParenRight);
				}
				break;
			case 6:
				{
				setState(81);
				functionName();
				setState(82);
				match(ParenLeft);
				setState(83);
				parameterList();
				setState(84);
				match(ParenRight);
				}
				break;
			case 7:
				{
				setState(86);
				reference();
				}
				break;
			case 8:
				{
				setState(87);
				match(QuotedLabel);
				}
				break;
			case 9:
				{
				setState(88);
				match(AutomaticIntersection);
				}
				break;
			case 10:
				{
				setState(89);
				namedExpression();
				}
				break;
			case 11:
				{
				setState(90);
				match(Error);
				}
				break;
			}
			setState(124);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(122);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						setState(93);
						if (!(6 >= _localctx.pr)) throw new FailedPredicateException(this, "6 >= $pr");
						setState(94);
						postfixOp();
						}
						break;
					case 2:
						{
						setState(95);
						if (!(9 >= _localctx.pr)) throw new FailedPredicateException(this, "9 >= $pr");
						setState(96);
						match(RangeOp);
						setState(97);
						expression(10);
						}
						break;
					case 3:
						{
						setState(98);
						if (!(8 >= _localctx.pr)) throw new FailedPredicateException(this, "8 >= $pr");
						setState(99);
						match(IntersectionOp);
						setState(100);
						expression(9);
						}
						break;
					case 4:
						{
						setState(101);
						if (!(7 >= _localctx.pr)) throw new FailedPredicateException(this, "7 >= $pr");
						setState(102);
						match(ReferenceConcatenationOp);
						setState(103);
						expression(8);
						}
						break;
					case 5:
						{
						setState(104);
						if (!(5 >= _localctx.pr)) throw new FailedPredicateException(this, "5 >= $pr");
						setState(105);
						match(Power);
						setState(106);
						expression(6);
						}
						break;
					case 6:
						{
						setState(107);
						if (!(4 >= _localctx.pr)) throw new FailedPredicateException(this, "4 >= $pr");
						setState(108);
						mulplicativeOP();
						setState(109);
						expression(5);
						}
						break;
					case 7:
						{
						setState(111);
						if (!(3 >= _localctx.pr)) throw new FailedPredicateException(this, "3 >= $pr");
						setState(112);
						additiveOp();
						setState(113);
						expression(4);
						}
						break;
					case 8:
						{
						setState(115);
						if (!(2 >= _localctx.pr)) throw new FailedPredicateException(this, "2 >= $pr");
						setState(116);
						match(StringOp);
						setState(117);
						expression(3);
						}
						break;
					case 9:
						{
						setState(118);
						if (!(1 >= _localctx.pr)) throw new FailedPredicateException(this, "1 >= $pr");
						setState(119);
						comparisonOp();
						setState(120);
						expression(2);
						}
						break;
					}
					} 
				}
				setState(126);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrefixOpContext extends ParserRuleContext {
		public TerminalNode Plus() { return getToken(ODSFormulaParserParser.Plus, 0); }
		public TerminalNode Minus() { return getToken(ODSFormulaParserParser.Minus, 0); }
		public PrefixOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefixOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).enterPrefixOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).exitPrefixOp(this);
		}
	}

	public final PrefixOpContext prefixOp() throws RecognitionException {
		PrefixOpContext _localctx = new PrefixOpContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_prefixOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_la = _input.LA(1);
			if ( !(_la==T__6 || _la==T__7) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostfixOpContext extends ParserRuleContext {
		public TerminalNode Percent() { return getToken(ODSFormulaParserParser.Percent, 0); }
		public PostfixOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postfixOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).enterPostfixOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).exitPostfixOp(this);
		}
	}

	public final PostfixOpContext postfixOp() throws RecognitionException {
		PostfixOpContext _localctx = new PostfixOpContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_postfixOp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(IRI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InfixOpContext extends ParserRuleContext {
		public ArithmeticOpContext arithmeticOp() {
			return getRuleContext(ArithmeticOpContext.class,0);
		}
		public ComparisonOpContext comparisonOp() {
			return getRuleContext(ComparisonOpContext.class,0);
		}
		public TerminalNode StringOp() { return getToken(ODSFormulaParserParser.StringOp, 0); }
		public ReferenceOpContext referenceOp() {
			return getRuleContext(ReferenceOpContext.class,0);
		}
		public InfixOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infixOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).enterInfixOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).exitInfixOp(this);
		}
	}

	public final InfixOpContext infixOp() throws RecognitionException {
		InfixOpContext _localctx = new InfixOpContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_infixOp);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
			case T__7:
			case Mul:
			case Div:
			case Power:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				arithmeticOp();
				}
				break;
			case Eq:
			case NEq:
			case LT:
			case GT:
			case LE:
			case GE:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				comparisonOp();
				}
				break;
			case StringOp:
				enterOuterAlt(_localctx, 3);
				{
				setState(133);
				match(StringOp);
				}
				break;
			case IntersectionOp:
			case ReferenceConcatenationOp:
			case RangeOp:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				referenceOp();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArithmeticOpContext extends ParserRuleContext {
		public AdditiveOpContext additiveOp() {
			return getRuleContext(AdditiveOpContext.class,0);
		}
		public MulplicativeOPContext mulplicativeOP() {
			return getRuleContext(MulplicativeOPContext.class,0);
		}
		public TerminalNode Power() { return getToken(ODSFormulaParserParser.Power, 0); }
		public ArithmeticOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmeticOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).enterArithmeticOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).exitArithmeticOp(this);
		}
	}

	public final ArithmeticOpContext arithmeticOp() throws RecognitionException {
		ArithmeticOpContext _localctx = new ArithmeticOpContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_arithmeticOp);
		try {
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				additiveOp();
				}
				break;
			case Mul:
			case Div:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				mulplicativeOP();
				}
				break;
			case Power:
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				match(Power);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AdditiveOpContext extends ParserRuleContext {
		public TerminalNode Plus() { return getToken(ODSFormulaParserParser.Plus, 0); }
		public TerminalNode Minus() { return getToken(ODSFormulaParserParser.Minus, 0); }
		public AdditiveOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_additiveOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).enterAdditiveOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).exitAdditiveOp(this);
		}
	}

	public final AdditiveOpContext additiveOp() throws RecognitionException {
		AdditiveOpContext _localctx = new AdditiveOpContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_additiveOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !(_la==T__6 || _la==T__7) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MulplicativeOPContext extends ParserRuleContext {
		public TerminalNode Mul() { return getToken(ODSFormulaParserParser.Mul, 0); }
		public TerminalNode Div() { return getToken(ODSFormulaParserParser.Div, 0); }
		public MulplicativeOPContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mulplicativeOP; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).enterMulplicativeOP(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).exitMulplicativeOP(this);
		}
	}

	public final MulplicativeOPContext mulplicativeOP() throws RecognitionException {
		MulplicativeOPContext _localctx = new MulplicativeOPContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_mulplicativeOP);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_la = _input.LA(1);
			if ( !(_la==Mul || _la==Div) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonOpContext extends ParserRuleContext {
		public TerminalNode Eq() { return getToken(ODSFormulaParserParser.Eq, 0); }
		public TerminalNode NEq() { return getToken(ODSFormulaParserParser.NEq, 0); }
		public TerminalNode LT() { return getToken(ODSFormulaParserParser.LT, 0); }
		public TerminalNode GT() { return getToken(ODSFormulaParserParser.GT, 0); }
		public TerminalNode LE() { return getToken(ODSFormulaParserParser.LE, 0); }
		public TerminalNode GE() { return getToken(ODSFormulaParserParser.GE, 0); }
		public ComparisonOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparisonOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).enterComparisonOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).exitComparisonOp(this);
		}
	}

	public final ComparisonOpContext comparisonOp() throws RecognitionException {
		ComparisonOpContext _localctx = new ComparisonOpContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_comparisonOp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Eq) | (1L << NEq) | (1L << LT) | (1L << GT) | (1L << LE) | (1L << GE))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReferenceOpContext extends ParserRuleContext {
		public TerminalNode IntersectionOp() { return getToken(ODSFormulaParserParser.IntersectionOp, 0); }
		public TerminalNode ReferenceConcatenationOp() { return getToken(ODSFormulaParserParser.ReferenceConcatenationOp, 0); }
		public TerminalNode RangeOp() { return getToken(ODSFormulaParserParser.RangeOp, 0); }
		public ReferenceOpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_referenceOp; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).enterReferenceOp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ODSFormulaParserListener) ((ODSFormulaParserListener)listener).exitReferenceOp(this);
		}
	}

	public final ReferenceOpContext referenceOp() throws RecognitionException {
		ReferenceOpContext _localctx = new ReferenceOpContext(_ctx, getState());
